--- a/src/app/metros-lineales/metros-lineales.page.html
+++ b/src/app/metros-lineales/metros-lineales.page.html
@@ -6,21 +6,19 @@
 </ion-header>
 
 <ion-content>
-  <div fxFlexFill fxLayout="column">
-    <ion-item lines="full" detail (click)="setWorkData()">
-      <!--
-        <ion-avatar slot="start" fxLayoutAlign="center center">
-            <ion-icon name="construct" size="large" color="secondary"></ion-icon>
-        </ion-avatar>
-      -->
+  <ion-fab vertical="top" edge horizontal="end" slot="fixed">
+    <ion-fab-button mini color="tertiary" (click)="share()"><ion-icon name="share"></ion-icon></ion-fab-button>
+  </ion-fab>
 
+  <div id="mlDiv" fxFlexFill fxLayout="column">
+    <ion-item lines="full" detail (click)="setWorkData()">
       <ion-label text-wrap>
-        <ion-text color="dark"> {{ CurrentWork.Material.Nombre }} </ion-text>
+        <ion-text color="dark"> <ion-icon name="albums" color="secondary"></ion-icon> ({{ CurrentWork.Material.Abreviatura }}) {{ CurrentWork.Material.Nombre }} </ion-text>
         <ion-text color="medium">
           <p>
             <span fxFlex="50%">
               <ion-icon name="cube" color="secondary"></ion-icon>
-              {{ CurrentWork.Material.Densidad }} g/cm<sup>3</sup>
+              {{ CurrentWork.Material.Densidad }} <sup>g</sup>/<sub>cm<sup>3</sup></sub>
             </span>
             <span fxFlex="50%">
               <ion-icon color="secondary" src="assets/icons/md-vertical-align.svg"></ion-icon>
@@ -32,11 +30,11 @@
           <p>
             <span fxFlex="50%">
               <ion-icon name="swap" color="secondary"></ion-icon>
-              {{ CurrentWork.Ancho }} g/cm<sup>3</sup>
+              {{ CurrentWork.Ancho }} cm
             </span>
             <span fxFlex="50%">
               <ion-icon name="color-fill" color="secondary"></ion-icon>
-              {{ CurrentWork.Tinta }}g/cm<sup>2</sup>
+              {{ CurrentWork.Tinta }}<sup>g</sup>/<sub>cm<sup>2</sup></sub>
             </span>
           </p>
         </ion-text>
@@ -44,7 +42,7 @@
           <p>
             <span fxFlex="50%">
               <ion-icon name="speedometer" color="secondary"></ion-icon>
-              {{ CurrentWork.Velocidad }} m/min
+              {{ CurrentWork.Velocidad }} <sup>m</sup>/<sub>min</sub>
             </span>
             <span fxFlex="50%"> </span>
           </p>
@@ -52,69 +50,117 @@
       </ion-label>
     </ion-item>
     <ion-content>
-      <!--
-        <ion-fab vertical="top" horizontal="end" edge slot="fixed" (click)="setWorkData()">
-            <ion-fab-button mini color="tertiary" translucent="true">
-                <ion-icon color="light" name="create"></ion-icon>
-            </ion-fab-button>
-        </ion-fab>
-      -->
-
       <ion-tabs #tabs_ml>
         <ion-tab tab="tab-kgml">
           <ion-content scrollY="true">
             <ion-item>
-              <ion-label>Cantidad</ion-label>
-              <ion-input [(ngModel)]="CurrentWork.Cantidad" type="number" (ionChange)="calculate()" min="0"></ion-input>
+              <ion-icon slot="start" name="cube" color="secondary"> </ion-icon>
+              <ion-label position="stacked">Cantidad</ion-label>
+              <ion-input [(ngModel)]="CurrentWork.Cantidad" type="number" placeholder="0" (ionChange)="calculate()" min="0"></ion-input>
+              <ion-note slot="end">Kg</ion-note>
             </ion-item>
-            {{ CurrentWork | json }}
+            <ion-card>
+              <ion-card-header color="tertiary"> <ion-card-subtitle>Resultados</ion-card-subtitle> </ion-card-header>
+
+              <ion-card-content>
+                <ion-list lines="full">
+                  <ion-item>
+                    <ion-icon slot="start" color="tertiary" src="assets/icons/ruler.svg"> </ion-icon>
+                    <ion-label>Longitud:</ion-label>
+                    <ion-text>{{ CurrentWork.Metros | number: '1.0-0' }}</ion-text>
+                    <ion-note slot="end" class="note-end">m</ion-note>
+                  </ion-item>
+                  <ion-item>
+                    <ion-icon name="information-circle-outline" slot="start" color="tertiary"></ion-icon>
+                    <ion-label>Gramaje:</ion-label>
+                    <ion-text>{{ CurrentWork.Gramaje | number: '1.3-3' }}</ion-text>
+                    <ion-note slot="end" class="note-end">
+                      <sup>g</sup>/<sub>m<sup>2</sup></sub>
+                    </ion-note>
+                  </ion-item>
+                  <ion-item>
+                    <ion-icon name="expand" slot="start" color="tertiary"></ion-icon>
+                    <ion-label>Metros<sup>2</sup>:</ion-label>
+                    <ion-text>{{ CurrentWork.mt2Totales | number: '1.2-2' }}</ion-text>
+                    <ion-note slot="end" class="note-end">m<sup>2</sup></ion-note>
+                  </ion-item>
+                  <ion-item>
+                    <ion-icon name="stopwatch" slot="start" color="tertiary"></ion-icon>
+                    <ion-label>Tiempo:</ion-label>
+                    <ion-text>{{ CurrentWork.Tiempo | number: '1.2-2' }}</ion-text>
+                    <ion-note slot="end" class="note-end">min.</ion-note>
+                  </ion-item>
+                  <ion-item>
+                    <ion-icon name="clock" slot="start" color="tertiary"></ion-icon>
+                    <ion-label>Kg/h:</ion-label>
+                    <ion-text>{{ CurrentWork.KgHora | number: '1.2-2' }}</ion-text>
+                    <ion-note slot="end" class="note-end"><sup>Kg</sup>/<sub>h</sub></ion-note>
+                  </ion-item>
+                </ion-list>
+              </ion-card-content>
+            </ion-card>
           </ion-content>
         </ion-tab>
         <ion-tab tab="tab-mlkg">
           <ion-content scrollY="true">
             <ion-item>
-              <ion-label>Metros Lineales</ion-label>
+              <ion-icon slot="start" color="secondary" src="assets/icons/ruler.svg"> </ion-icon>
+              <ion-label position="stacked">Longitud</ion-label>
               <ion-input [(ngModel)]="CurrentWork.Metros" type="number" (ionChange)="calculate()" min="0"></ion-input>
+              <ion-note slot="end">m</ion-note>
             </ion-item>
-            {{ CurrentWork | json }}
+            <ion-card>
+              <ion-card-header color="tertiary"> <ion-card-subtitle>Resultados</ion-card-subtitle> </ion-card-header>
+              <ion-card-content>
+                <ion-list lines="full">
+                  <ion-item>
+                    <ion-icon slot="start" color="tertiary" src="assets/icons/ruler.svg"> </ion-icon>
+                    <ion-label>Cantidad:</ion-label>
+                    <ion-text>{{ CurrentWork.Cantidad | number: '1.3-3' }}</ion-text>
+                    <ion-note slot="end" class="note-end">Kg</ion-note>
+                  </ion-item>
+                  <ion-item>
+                    <ion-icon name="information-circle-outline" slot="start" color="tertiary"></ion-icon>
+                    <ion-label>Gramaje:</ion-label>
+                    <ion-text>{{ CurrentWork.Gramaje | number: '1.3-3' }}</ion-text>
+                    <ion-note slot="end" class="note-end">
+                      <sup>g</sup>/<sub>m<sup>2</sup></sub>
+                    </ion-note>
+                  </ion-item>
+                  <ion-item>
+                    <ion-icon name="expand" slot="start" color="tertiary"></ion-icon>
+                    <ion-label>Metros<sup>2</sup>:</ion-label>
+                    <ion-text>{{ CurrentWork.mt2Totales | number: '1.2-2' }}</ion-text>
+                    <ion-note slot="end" class="note-end">m<sup>2</sup></ion-note>
+                  </ion-item>
+                  <ion-item>
+                    <ion-icon name="stopwatch" slot="start" color="tertiary"></ion-icon>
+                    <ion-label>Tiempo:</ion-label>
+                    <ion-text>{{ CurrentWork.Tiempo | number: '1.2-2' }}</ion-text>
+                    <ion-note slot="end" class="note-end">min.</ion-note>
+                  </ion-item>
+                  <ion-item>
+                    <ion-icon name="clock" slot="start" color="tertiary"></ion-icon>
+                    <ion-label>Kg/h:</ion-label>
+                    <ion-text>{{ CurrentWork.KgHora | number: '1.2-2' }}</ion-text>
+                    <ion-note slot="end" class="note-end"><sup>Kg</sup>/<sub>h</sub></ion-note>
+                  </ion-item>
+                </ion-list>
+              </ion-card-content>
+            </ion-card>
           </ion-content>
         </ion-tab>
-
-        <ion-tab-bar slot="bottom" (ionTabBarChanged)="changeTab(tabs_ml)">
+        <ion-tab-bar slot="bottom" color="primary" (ionTabBarChanged)="changeTab(tabs_ml)">
           <ion-tab-button tab="tab-kgml">
-            <i class="fas fa-weight-hanging"></i>
+            <ion-icon name="cube"> </ion-icon>
             <ion-label>Kg a m</ion-label>
           </ion-tab-button>
           <ion-tab-button tab="tab-mlkg">
-            <i class="fas fa-ruler-horizontal"></i>
+            <ion-icon src="assets/icons/ruler.svg"> </ion-icon>
             <ion-label>m a Kg</ion-label>
           </ion-tab-button>
         </ion-tab-bar>
       </ion-tabs>
     </ion-content>
-    <!--
-      <ion-item fxLayout="row" fxFlex="100%">
-          <ion-tabs>
-              <ion-tab tab="tab-schedule"
-                  ><ion-content scrollY="true">
-                      <p>Tab1</p>
-                      <br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.<br />.
-                  </ion-content></ion-tab
-              >
-              <ion-tab tab="tab-speaker"><p>Tab2</p> </ion-tab>
-
-              <ion-tab-bar slot="bottom">
-                  <ion-tab-button tab="tab-schedule">
-                      <i class="fas fa-weight-hanging"></i>
-                      <ion-label>Kg a m</ion-label>
-                  </ion-tab-button>
-                  <ion-tab-button tab="tab-speaker">
-                      <i class="fas fa-ruler-horizontal"></i>
-                      <ion-label>m a Kg</ion-label>
-                  </ion-tab-button>
-              </ion-tab-bar>
-          </ion-tabs>
-      </ion-item>
-    -->
   </div>
 </ion-content>
