--- a/src/app/metros-lineales/metros-lineales.page.html
+++ b/src/app/metros-lineales/metros-lineales.page.html
@@ -10,157 +10,179 @@
     <ion-fab-button mini color="tertiary" (click)="share()"><ion-icon name="share"></ion-icon></ion-fab-button>
   </ion-fab>
 
-  <div id="mlDiv" fxFlexFill fxLayout="column">
-    <ion-item lines="full" detail (click)="setWorkData()">
-      <ion-label text-wrap>
-        <ion-text color="dark"> <ion-icon name="albums" color="secondary"></ion-icon> ({{ CurrentWork.Material.Abreviatura }}) {{ CurrentWork.Material.Nombre }} </ion-text>
-        <ion-text color="medium">
-          <p>
-            <span fxFlex="50%">
-              <ion-icon name="cube" color="secondary"></ion-icon>
-              {{ CurrentWork.Material.Densidad }} <sup>g</sup>/<sub>cm<sup>3</sup></sub>
-            </span>
-            <span fxFlex="50%">
-              <ion-icon color="secondary" src="assets/icons/md-vertical-align.svg"></ion-icon>
-              {{ CurrentWork.Calibre }}<span>&#181;</span>m
-            </span>
-          </p>
-        </ion-text>
-        <ion-text color="medium">
-          <p>
-            <span fxFlex="50%">
-              <ion-icon name="swap" color="secondary"></ion-icon>
-              {{ CurrentWork.Ancho }} cm
-            </span>
-            <span fxFlex="50%">
-              <ion-icon name="color-fill" color="secondary"></ion-icon>
-              {{ CurrentWork.Tinta }}<sup>g</sup>/<sub>cm<sup>2</sup></sub>
-            </span>
-          </p>
-        </ion-text>
-        <ion-text color="medium">
-          <p>
-            <span fxFlex="50%">
-              <ion-icon name="speedometer" color="secondary"></ion-icon>
-              {{ CurrentWork.Velocidad }} <sup>m</sup>/<sub>min</sub>
-            </span>
-            <span fxFlex="50%"> </span>
-          </p>
-        </ion-text>
-      </ion-label>
-    </ion-item>
-    <ion-content>
-      <ion-tabs #tabs_ml>
-        <ion-tab tab="tab-kgml">
-          <ion-content scrollY="true">
-            <ion-item>
-              <ion-icon slot="start" name="cube" color="secondary"> </ion-icon>
-              <ion-label position="stacked">Cantidad</ion-label>
-              <ion-input [(ngModel)]="CurrentWork.Cantidad" type="number" placeholder="0" (ionChange)="calculate()" min="0"></ion-input>
-              <ion-note slot="end">Kg</ion-note>
-            </ion-item>
-            <ion-card>
-              <ion-card-header color="tertiary"> <ion-card-subtitle>Resultados</ion-card-subtitle> </ion-card-header>
+  <ion-item lines="full" detail (click)="setWorkData()">
+    <ion-label text-wrap>
+      <ion-text color="dark"> <ion-icon name="albums" color="secondary"></ion-icon> ({{ CurrentWork.Material.Abreviatura }}) {{ CurrentWork.Material.Nombre }} </ion-text>
+      <ion-text color="medium">
+        <p>
+          <span fxFlex="50%">
+            <ion-icon name="cube" color="secondary"></ion-icon>
+            {{ CurrentWork.Material.Densidad }} <sup>g</sup>/<sub>cm<sup>3</sup></sub>
+          </span>
+          <span fxFlex="50%">
+            <ion-icon color="secondary" src="assets/icons/md-vertical-align.svg"></ion-icon>
+            {{ CurrentWork.Calibre }}<span>&#181;</span>m
+          </span>
+        </p>
+      </ion-text>
+      <ion-text color="medium">
+        <p>
+          <span fxFlex="50%">
+            <ion-icon name="swap" color="secondary"></ion-icon>
+            {{ CurrentWork.Ancho }} cm
+          </span>
+          <span fxFlex="50%">
+            <ion-icon name="color-fill" color="secondary"></ion-icon>
+            {{ CurrentWork.Tinta }}<sup>g</sup>/<sub>cm<sup>2</sup></sub>
+          </span>
+        </p>
+      </ion-text>
+      <ion-text color="medium">
+        <p>
+          <span fxFlex="50%">
+            <ion-icon name="speedometer" color="secondary"></ion-icon>
+            {{ CurrentWork.Velocidad }} <sup>m</sup>/<sub>min</sub>
+          </span>
+          <span fxFlex="50%"> </span>
+        </p>
+      </ion-text>
+    </ion-label>
+  </ion-item>
+  <ion-item *ngIf="tab === 'fromkg'">
+    <ion-icon slot="start" name="cube" color="secondary"> </ion-icon>
+    <ion-label position="stacked">Cantidad</ion-label>
+    <ion-input [(ngModel)]="CurrentWork.Cantidad" type="number" placeholder="0" (ionChange)="calculate()" min="0"></ion-input>
+    <ion-note slot="end">Kg</ion-note>
+  </ion-item>
+  <ion-item *ngIf="tab === 'fromlargo'">
+    <ion-icon slot="start" color="secondary" src="assets/icons/ruler.svg"> </ion-icon>
+    <ion-label position="stacked">Longitud</ion-label>
+    <ion-input [(ngModel)]="CurrentWork.Metros" type="number" (ionChange)="calculate()" min="0"></ion-input>
+    <ion-note slot="end">m</ion-note>
+  </ion-item>
 
-              <ion-card-content>
-                <ion-list lines="full">
-                  <ion-item>
-                    <ion-icon slot="start" color="tertiary" src="assets/icons/ruler.svg"> </ion-icon>
-                    <ion-label>Longitud:</ion-label>
-                    <ion-text>{{ CurrentWork.Metros | number: '1.0-0' }}</ion-text>
-                    <ion-note slot="end" class="note-end">m</ion-note>
-                  </ion-item>
-                  <ion-item>
-                    <ion-icon name="information-circle-outline" slot="start" color="tertiary"></ion-icon>
-                    <ion-label>Gramaje:</ion-label>
-                    <ion-text>{{ CurrentWork.Gramaje | number: '1.3-3' }}</ion-text>
-                    <ion-note slot="end" class="note-end">
-                      <sup>g</sup>/<sub>m<sup>2</sup></sub>
-                    </ion-note>
-                  </ion-item>
-                  <ion-item>
-                    <ion-icon name="expand" slot="start" color="tertiary"></ion-icon>
-                    <ion-label>Metros<sup>2</sup>:</ion-label>
-                    <ion-text>{{ CurrentWork.mt2Totales | number: '1.2-2' }}</ion-text>
-                    <ion-note slot="end" class="note-end">m<sup>2</sup></ion-note>
-                  </ion-item>
-                  <ion-item>
-                    <ion-icon name="stopwatch" slot="start" color="tertiary"></ion-icon>
-                    <ion-label>Tiempo:</ion-label>
-                    <ion-text>{{ CurrentWork.Tiempo | number: '1.2-2' }}</ion-text>
-                    <ion-note slot="end" class="note-end">min.</ion-note>
-                  </ion-item>
-                  <ion-item>
-                    <ion-icon name="clock" slot="start" color="tertiary"></ion-icon>
-                    <ion-label>Kg/h:</ion-label>
-                    <ion-text>{{ CurrentWork.KgHora | number: '1.2-2' }}</ion-text>
-                    <ion-note slot="end" class="note-end"><sup>Kg</sup>/<sub>h</sub></ion-note>
-                  </ion-item>
-                </ion-list>
-              </ion-card-content>
-            </ion-card>
-          </ion-content>
-        </ion-tab>
-        <ion-tab tab="tab-mlkg">
-          <ion-content scrollY="true">
-            <ion-item>
-              <ion-icon slot="start" color="secondary" src="assets/icons/ruler.svg"> </ion-icon>
-              <ion-label position="stacked">Longitud</ion-label>
-              <ion-input [(ngModel)]="CurrentWork.Metros" type="number" (ionChange)="calculate()" min="0"></ion-input>
-              <ion-note slot="end">m</ion-note>
-            </ion-item>
-            <ion-card>
-              <ion-card-header color="tertiary"> <ion-card-subtitle>Resultados</ion-card-subtitle> </ion-card-header>
-              <ion-card-content>
-                <ion-list lines="full">
-                  <ion-item>
-                    <ion-icon slot="start" color="tertiary" src="assets/icons/ruler.svg"> </ion-icon>
-                    <ion-label>Cantidad:</ion-label>
-                    <ion-text>{{ CurrentWork.Cantidad | number: '1.3-3' }}</ion-text>
-                    <ion-note slot="end" class="note-end">Kg</ion-note>
-                  </ion-item>
-                  <ion-item>
-                    <ion-icon name="information-circle-outline" slot="start" color="tertiary"></ion-icon>
-                    <ion-label>Gramaje:</ion-label>
-                    <ion-text>{{ CurrentWork.Gramaje | number: '1.3-3' }}</ion-text>
-                    <ion-note slot="end" class="note-end">
-                      <sup>g</sup>/<sub>m<sup>2</sup></sub>
-                    </ion-note>
-                  </ion-item>
-                  <ion-item>
-                    <ion-icon name="expand" slot="start" color="tertiary"></ion-icon>
-                    <ion-label>Metros<sup>2</sup>:</ion-label>
-                    <ion-text>{{ CurrentWork.mt2Totales | number: '1.2-2' }}</ion-text>
-                    <ion-note slot="end" class="note-end">m<sup>2</sup></ion-note>
-                  </ion-item>
-                  <ion-item>
-                    <ion-icon name="stopwatch" slot="start" color="tertiary"></ion-icon>
-                    <ion-label>Tiempo:</ion-label>
-                    <ion-text>{{ CurrentWork.Tiempo | number: '1.2-2' }}</ion-text>
-                    <ion-note slot="end" class="note-end">min.</ion-note>
-                  </ion-item>
-                  <ion-item>
-                    <ion-icon name="clock" slot="start" color="tertiary"></ion-icon>
-                    <ion-label>Kg/h:</ion-label>
-                    <ion-text>{{ CurrentWork.KgHora | number: '1.2-2' }}</ion-text>
-                    <ion-note slot="end" class="note-end"><sup>Kg</sup>/<sub>h</sub></ion-note>
-                  </ion-item>
-                </ion-list>
-              </ion-card-content>
-            </ion-card>
-          </ion-content>
-        </ion-tab>
-        <ion-tab-bar slot="bottom" color="primary" (ionTabBarChanged)="changeTab(tabs_ml)">
-          <ion-tab-button tab="tab-kgml">
-            <ion-icon name="cube"> </ion-icon>
-            <ion-label>Kg a m</ion-label>
-          </ion-tab-button>
-          <ion-tab-button tab="tab-mlkg">
-            <ion-icon src="assets/icons/ruler.svg"> </ion-icon>
-            <ion-label>m a Kg</ion-label>
-          </ion-tab-button>
-        </ion-tab-bar>
-      </ion-tabs>
-    </ion-content>
-  </div>
+  <ion-card>
+    <ion-card-header> <ion-card-title>Resultados</ion-card-title> </ion-card-header>
+
+    <ion-card-content> <canvas #canvasAlto id="canvasAlto" height="600" width="1000" style="height:100%; width:100%"></canvas> </ion-card-content>
+  </ion-card>
+  <!--
+    <div id="mlDiv" fxFlexFill fxLayout="column">
+      <ion-content>
+        <ion-tabs #tabs_ml>
+          <ion-tab tab="tab-kgml">
+            <ion-content scrollY="true">
+              <ion-card>
+                <ion-card-header color="tertiary"> <ion-card-subtitle>Resultados</ion-card-subtitle> </ion-card-header>
+
+                <ion-card-content>
+                  <ion-list lines="full">
+                    <ion-item>
+                      <ion-icon slot="start" color="tertiary" src="assets/icons/ruler.svg"> </ion-icon>
+                      <ion-label>Longitud:</ion-label>
+                      <ion-text>{{ CurrentWork.Metros | number: '1.0-0' }}</ion-text>
+                      <ion-note slot="end" class="note-end">m</ion-note>
+                    </ion-item>
+                    <ion-item>
+                      <ion-icon name="information-circle-outline" slot="start" color="tertiary"></ion-icon>
+                      <ion-label>Gramaje:</ion-label>
+                      <ion-text>{{ CurrentWork.Gramaje | number: '1.3-3' }}</ion-text>
+                      <ion-note slot="end" class="note-end">
+                        <sup>g</sup>/<sub>m<sup>2</sup></sub>
+                      </ion-note>
+                    </ion-item>
+                    <ion-item>
+                      <ion-icon name="expand" slot="start" color="tertiary"></ion-icon>
+                      <ion-label>Metros<sup>2</sup>:</ion-label>
+                      <ion-text>{{ CurrentWork.mt2Totales | number: '1.2-2' }}</ion-text>
+                      <ion-note slot="end" class="note-end">m<sup>2</sup></ion-note>
+                    </ion-item>
+                    <ion-item>
+                      <ion-icon name="stopwatch" slot="start" color="tertiary"></ion-icon>
+                      <ion-label>Tiempo:</ion-label>
+                      <ion-text>{{ CurrentWork.Tiempo | number: '1.2-2' }}</ion-text>
+                      <ion-note slot="end" class="note-end">min.</ion-note>
+                    </ion-item>
+                    <ion-item>
+                      <ion-icon name="clock" slot="start" color="tertiary"></ion-icon>
+                      <ion-label>Kg/h:</ion-label>
+                      <ion-text>{{ CurrentWork.KgHora | number: '1.2-2' }}</ion-text>
+                      <ion-note slot="end" class="note-end"><sup>Kg</sup>/<sub>h</sub></ion-note>
+                    </ion-item>
+                  </ion-list>
+                </ion-card-content>
+              </ion-card>
+            </ion-content>
+          </ion-tab>
+          <ion-tab tab="tab-mlkg">
+            <ion-content scrollY="true">
+              <ion-card>
+                <ion-card-header color="tertiary"> <ion-card-subtitle>Resultados</ion-card-subtitle> </ion-card-header>
+                <ion-card-content>
+                  <ion-list lines="full">
+                    <ion-item>
+                      <ion-icon slot="start" color="tertiary" src="assets/icons/ruler.svg"> </ion-icon>
+                      <ion-label>Cantidad:</ion-label>
+                      <ion-text>{{ CurrentWork.Cantidad | number: '1.3-3' }}</ion-text>
+                      <ion-note slot="end" class="note-end">Kg</ion-note>
+                    </ion-item>
+                    <ion-item>
+                      <ion-icon name="information-circle-outline" slot="start" color="tertiary"></ion-icon>
+                      <ion-label>Gramaje:</ion-label>
+                      <ion-text>{{ CurrentWork.Gramaje | number: '1.3-3' }}</ion-text>
+                      <ion-note slot="end" class="note-end">
+                        <sup>g</sup>/<sub>m<sup>2</sup></sub>
+                      </ion-note>
+                    </ion-item>
+                    <ion-item>
+                      <ion-icon name="expand" slot="start" color="tertiary"></ion-icon>
+                      <ion-label>Metros<sup>2</sup>:</ion-label>
+                      <ion-text>{{ CurrentWork.mt2Totales | number: '1.2-2' }}</ion-text>
+                      <ion-note slot="end" class="note-end">m<sup>2</sup></ion-note>
+                    </ion-item>
+                    <ion-item>
+                      <ion-icon name="stopwatch" slot="start" color="tertiary"></ion-icon>
+                      <ion-label>Tiempo:</ion-label>
+                      <ion-text>{{ CurrentWork.Tiempo | number: '1.2-2' }}</ion-text>
+                      <ion-note slot="end" class="note-end">min.</ion-note>
+                    </ion-item>
+                    <ion-item>
+                      <ion-icon name="clock" slot="start" color="tertiary"></ion-icon>
+                      <ion-label>Kg/h:</ion-label>
+                      <ion-text>{{ CurrentWork.KgHora | number: '1.2-2' }}</ion-text>
+                      <ion-note slot="end" class="note-end"><sup>Kg</sup>/<sub>h</sub></ion-note>
+                    </ion-item>
+                  </ion-list>
+                </ion-card-content>
+              </ion-card>
+            </ion-content>
+          </ion-tab>
+          <ion-tab-bar slot="bottom" color="primary" (ionTabBarChanged)="changeTab(tabs_ml)">
+            <ion-tab-button tab="tab-kgml">
+              <ion-icon name="cube"> </ion-icon>
+              <ion-label>Kg a m</ion-label>
+            </ion-tab-button>
+            <ion-tab-button tab="tab-mlkg">
+              <ion-icon src="assets/icons/ruler.svg"> </ion-icon>
+              <ion-label>m a Kg</ion-label>
+            </ion-tab-button>
+          </ion-tab-bar>
+        </ion-tabs>
+      </ion-content>
+    </div>
+  -->
 </ion-content>
+<ion-footer>
+  <ion-toolbar color="primary" style="padding-top: 5px;">
+    <ion-segment [(ngModel)]="tab" value="fromkg" (ionChange)="change($event)">
+      <ion-segment-button value="fromkg">
+        <ion-icon name="cube" style="margin: 0px;"> </ion-icon>
+        <ion-label style="margin-top: 0px; margin-bottom: 5px">desde Kg</ion-label>
+      </ion-segment-button>
+      <ion-segment-button value="fromlargo">
+        <ion-icon src="assets/icons/ruler.svg" style="margin: 0px;"> </ion-icon>
+        <ion-label style="margin-top: 0px; margin-bottom: 5px">desde Largo</ion-label>
+      </ion-segment-button>
+    </ion-segment>
+  </ion-toolbar>
+</ion-footer>
