--- a/src/app/alto-rollo/alto-rollo.page.html
+++ b/src/app/alto-rollo/alto-rollo.page.html
@@ -1,85 +1,117 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start"> <ion-menu-button></ion-menu-button> </ion-buttons>
-    <ion-title> Alto de Rollo </ion-title>
+    <ion-title> Alto y Piezas por Rollo </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content scrollY="true">
   <ion-fab vertical="top" edge horizontal="end" slot="fixed">
     <ion-fab-button mini color="tertiary" (click)="share()"><ion-icon name="share"></ion-icon></ion-fab-button>
   </ion-fab>
 
-  <div id="mlDiv" fxFlexFill fxLayout="column">
-    <ion-item lines="full" detail (click)="setWorkData()">
-      <ion-label text-wrap>
-        <ion-text color="dark"> <ion-icon name="albums" color="secondary"></ion-icon> ({{ CurrentWork.Material.Abreviatura }}) {{ CurrentWork.Material.Nombre }} </ion-text>
-        <ion-text color="medium">
-          <p>
-            <span fxFlex="50%">
-              <ion-icon name="cube" color="secondary"></ion-icon>
-              {{ CurrentWork.Material.Densidad }} <sup>g</sup>/<sub>cm<sup>3</sup></sub>
-            </span>
-            <span fxFlex="50%">
-              <ion-icon color="secondary" src="assets/icons/md-vertical-align.svg"></ion-icon>
-              {{ CurrentWork.Calibre }}<span>&#181;</span>m
-            </span>
-          </p>
-        </ion-text>
-        <ion-text color="medium">
-          <p>
-            <span fxFlex="50%">
-              <ion-icon name="swap" color="secondary"></ion-icon>
-              {{ CurrentWork.Ancho }} cm
-            </span>
-            <span fxFlex="50%">
-              <ion-icon name="color-fill" color="secondary"></ion-icon>
-              {{ CurrentWork.Tinta }}<sup>g</sup>/<sub>cm<sup>2</sup></sub>
-            </span>
-          </p>
-        </ion-text>
-        <ion-text color="medium">
-          <p>
-            <span fxFlex="50%">
-              <ion-icon name="speedometer" color="secondary"></ion-icon>
-              {{ CurrentWork.Velocidad }} <sup>m</sup>/<sub>min</sub>
-            </span>
-            <span fxFlex="50%"> </span>
-          </p>
-        </ion-text>
-      </ion-label>
-    </ion-item>
-    <ion-content>
-      <ion-tabs #tabs_ml>
-        <ion-tab tab="tab-kgml">
-          <ion-content scrollY="true">
-            <ion-item>
-              <ion-icon slot="start" name="cube" color="secondary"> </ion-icon>
-              <ion-label position="fixed">Kg en Rollo</ion-label>
-              <ion-input [(ngModel)]="CurrentWork.CantidadRollo" type="number" placeholder="0" (ionChange)="calculate()" min="0"></ion-input>
-              <ion-note slot="end">Kg</ion-note>
-            </ion-item>
-            <ion-item>
-              <ion-icon slot="start" src="assets/icons/core.svg" color="secondary"> </ion-icon>
-              <ion-label>Centro</ion-label>
-              <ion-select [(ngModel)]="CurrentWork.Centro" [value]="CurrentWork.Centro" (ionChange)="calculate()" interface="popover" placeholder="Seleccione el tamaño del centro">
-                <ion-select-option [value]="core.val" *ngFor="let core of [{ val: 3, name: '3 Pulgadas' }, { val: 6, name: '6 Pulgadas' }]">{{ core.name }}</ion-select-option>
-              </ion-select>
-            </ion-item>
-          </ion-content>
-        </ion-tab>
-        <ion-tab tab="tab-mlkg"> <ion-content scrollY="true"> </ion-content> </ion-tab>
-        <ion-tab-bar slot="bottom" color="primary" (ionTabBarChanged)="changeTab(tabs_ml)">
-          <ion-tab-button tab="tab-kgml">
-            <ion-icon name="cube"> </ion-icon>
-            <ion-label>desde Kg</ion-label>
-          </ion-tab-button>
-          <ion-tab-button tab="tab-mlkg">
-            <ion-icon src="assets/icons/dot-circle.svg"> </ion-icon>
-            <ion-label>desde Alto</ion-label>
-          </ion-tab-button>
-        </ion-tab-bar>
-      </ion-tabs>
-    </ion-content>
-  </div>
+  <ion-item lines="full" detail (click)="setWorkData()">
+    <ion-label text-wrap>
+      <ion-text color="dark"> <ion-icon name="albums" color="secondary"></ion-icon> ({{ CurrentWork.Material.Abreviatura }}) {{ CurrentWork.Material.Nombre }} </ion-text>
+      <ion-text color="medium">
+        <p>
+          <span fxFlex="50%">
+            <ion-icon name="cube" color="secondary"></ion-icon>
+            {{ CurrentWork.Material.Densidad }} <sup>g</sup>/<sub>cm<sup>3</sup></sub>
+          </span>
+          <span fxFlex="50%">
+            <ion-icon color="secondary" src="assets/icons/md-vertical-align.svg"></ion-icon>
+            {{ CurrentWork.Calibre }}<span>&#181;</span>m
+          </span>
+        </p>
+      </ion-text>
+      <ion-text color="medium">
+        <p>
+          <span fxFlex="50%">
+            <ion-icon name="swap" color="secondary"></ion-icon>
+            {{ CurrentWork.Ancho }} cm
+          </span>
+          <span fxFlex="50%">
+            <ion-icon name="color-fill" color="secondary"></ion-icon>
+            {{ CurrentWork.Tinta }}<sup>g</sup>/<sub>cm<sup>2</sup></sub>
+          </span>
+        </p>
+      </ion-text>
+      <ion-text color="medium">
+        <p>
+          <span fxFlex="50%">
+            <ion-icon name="speedometer" color="secondary"></ion-icon>
+            {{ CurrentWork.Velocidad }} <sup>m</sup>/<sub>min</sub>
+          </span>
+          <span fxFlex="50%"> </span>
+        </p>
+      </ion-text>
+    </ion-label>
+  </ion-item>
+
+  <ion-item>
+    <ion-icon slot="start" src="assets/icons/core.svg" color="secondary"> </ion-icon>
+    <ion-label>Centro:</ion-label>
+    <ion-select [(ngModel)]="CurrentWork.Centro" [value]="CurrentWork.Centro" (ionChange)="calculate()" interface="popover" placeholder="Seleccione el tamaño del centro">
+      <ion-select-option [value]="core.val" *ngFor="let core of [{ val: 3, name: '3 Pulgadas' }, { val: 6, name: '6 Pulgadas' }]">{{ core.name }}</ion-select-option>
+    </ion-select>
+  </ion-item>
+
+  <ion-item>
+    <ion-icon slot="start" name="images" color="secondary"> </ion-icon>
+    <ion-label position="fixed">Rep. Eje:</ion-label>
+    <ion-input [(ngModel)]="CurrentWork.RepEje" type="number" placeholder="1" (ionChange)="calculate()" min="1"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-icon slot="start" name="image" color="secondary"> </ion-icon>
+    <ion-label position="fixed">Alto Diseño:</ion-label>
+    <ion-input [(ngModel)]="CurrentWork.AltoDis" type="number" placeholder="0" (ionChange)="calculate()" min="0"></ion-input>
+    <ion-note slot="end">cm</ion-note>
+  </ion-item>
+
+  <ion-item *ngIf="tab === 'fromkg'">
+    <ion-icon slot="start" name="cube" color="secondary"> </ion-icon>
+    <ion-label position="fixed">Kg en Rollo</ion-label>
+    <ion-input [(ngModel)]="CurrentWork.CantidadRollo" type="number" placeholder="0" (ionChange)="calculate()" min="0"></ion-input>
+    <ion-note slot="end">Kg</ion-note>
+  </ion-item>
+
+  <ion-item *ngIf="tab === 'fromlargo'">
+    <ion-icon slot="start" color="secondary" src="assets/icons/ruler.svg"> </ion-icon>
+    <ion-label position="fixed">Largo:</ion-label>
+    <ion-input [(ngModel)]="CurrentWork.LargoRollo" type="number" placeholder="0" (ionChange)="calculate()" min="0"></ion-input>
+    <ion-note slot="end">m</ion-note>
+  </ion-item>
+
+  <ion-item *ngIf="tab === 'fromalto'">
+    <ion-icon slot="start" color="secondary" src="assets/icons/dot-circle.svg"> </ion-icon>
+    <ion-label position="fixed">Alto:</ion-label>
+    <ion-input [(ngModel)]="CurrentWork.AltoRollo" type="number" placeholder="0" (ionChange)="calculate()" min="0"></ion-input>
+    <ion-note slot="end">mm</ion-note>
+  </ion-item>
+
+  <ion-card>
+    <ion-card-header> <ion-card-title>Resultados</ion-card-title> </ion-card-header>
+
+    <ion-card-content> <canvas #canvasAlto id="canvasAlto" height="600" width="1000" style="height:100%; width:100%"></canvas> </ion-card-content>
+  </ion-card>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar color="primary" style="padding-top: 5px;">
+    <ion-segment [(ngModel)]="tab" value="fromkg" (ionChange)="change($event)">
+      <ion-segment-button value="fromkg">
+        <ion-icon name="cube" style="margin: 0px;"> </ion-icon>
+        <ion-label style="margin-top: 0px; margin-bottom: 5px">desde Kg</ion-label>
+      </ion-segment-button>
+      <ion-segment-button value="fromlargo">
+        <ion-icon src="assets/icons/ruler.svg" style="margin: 0px;"> </ion-icon>
+        <ion-label style="margin-top: 0px; margin-bottom: 5px">desde Largo</ion-label>
+      </ion-segment-button>
+      <ion-segment-button value="fromalto">
+        <ion-icon src="assets/icons/dot-circle.svg" style="margin: 0px;"> </ion-icon>
+        <ion-label style="margin-top: 0px; margin-bottom: 5px">desde Alto</ion-label>
+      </ion-segment-button>
+    </ion-segment>
+  </ion-toolbar>
+</ion-footer>
